Made a modification to the dockerfile so itll hopefully work when it gets sent to the hostinger vps via docker manager github https url thang

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,7 @@
   "name": "umimatch-frontend",
   "version": "1.0.0",
   "description": "UmiMatch Frontend",
-  "main": "index.html",
   "scripts": {
-    "build": "node build.js",
-    "dev": "python -m http.server 3000"
-  },
-  "dependencies": {}
+    "build": "node build.js"
+  }
 }
